--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
   height: 320px;
   background: none;
   border-radius: 10px;
-  margin: 10px;
+  margin: 0 auto;
   transform-style: preserve-3d;
   transition: all 0.8s ease;
 }
