--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,13 @@ body {
   padding: .5rem 1rem;
 }
 
+.codeContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+}
+
 .container-fluid {
   padding-left: 5px;
   padding-right: 5px; 
