--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,30 @@ svg {
   height: auto; /* This maintains the aspect ratio */
 }
 
+#goTop {
+  display: none;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px 15px;
+  background-color: #ffc400;
+  color: #050505;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: opacity 0.3s;
+}
+
+#goTop.visible {
+  display: block;
+}
+
+
+/* #btn-back-to-top {
+position: fixed;
+bottom: 20px;
+right: 20px;
+display: none;
+} */
 
 /* Tablet Styles */
 @media (max-width: 1000px) {
